@@ -1,3 +1,7 @@
+* Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.3.5-0
+- Update the upper bound of stdlib to < 6.0.0
+- Update a URL in the README.md
+
 * Tue Nov 06 2018 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.3.4-0
 - Add explicit support for Oracle Linux
 - Update badges in README.md
